--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<p>
 					iOS Developer</p>
 					<ul class="actions">
-						<li><a href="./Haeeb Ahmed - Resume.pdf" target="_blank" class="button primary icon solid fa-file">View Resume</a></li>
+						<li><a href="./resume.pdf" target="_blank" class="button primary icon solid fa-file">View Resume</a></li>
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Portfolio</a></li>
 					</ul>
 				</div>
